# shinda

./: CMakeLists.txt  README.md  main.cpp  shinda  shinda.json
core/: CMakeLists.txt  Checker.cpp  Checker.h  Core.cpp  Core.h  FileSystem.cpp  FileSystem.h
github/: CMakeLists.txt  Github.cpp  Github.h
reader/: CMakeLists.txt  Json.cpp  Json.h  Reader.cpp  Reader.h
